Remove website and centralize Niassa docs (#20)
* Removed seqware-publications, seqware-distribution/docs, moved the .sh scripts from the root into scripts dir
* Slimmed down README and s/SeqWare/Niassa/
* Modified README, seqware-meta-db/README, seqware-webservice/README
* Updated readme for Pipeline to point to website; updated metadb and home READMEs